--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,13 @@
 }
 
 .background {
-  background: linear-gradient(0deg,
+  background: linear-gradient(
+      0deg,
       rgba(0, 0, 0, 0.6) 100%,
-      rgba(0, 0, 0, 0.6) 100%),
+      rgba(0, 0, 0, 0.6) 100%
+    ),
     url(../img/scooter-background.jpg) no-repeat center top / cover;
   background-size: 100%;
-  margin-bottom: 2;
 }
 
 .background-sqare {
@@ -79,10 +80,10 @@
   justify-content: flex-start;
   align-items: center;
   height: 62px;
-  padding-top: 268px;
+  padding-top: 20%;
   flex-direction: column;
-  padding-bottom: 261px;
-  margin-bottom: 261px;
+  padding-bottom: 20%;
+  margin-bottom: 15%;
 }
 
 .main-header-text-1 {
@@ -175,8 +176,218 @@
   font: lighter 20px Segoe UI;
   width: 194px;
   text-align: center;
+  margin-bottom: 124px;
 }
 
+.about-us-background {
+  background: white;
+}
+.about-us {
+  display: flex;
+  flex-direction: column;
+}
+.about-us-header {
+  font: lighter 34px Segoe UI;
+  margin-bottom: 54px;
+}
+.about-us-text {
+  font: lighter 20px Segoe UI;
+  margin-bottom: 34px;
+}
+
+.about-us-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.about-us-bottom-background {
+  background: #ffa019;
+  width: 100%;
+  height: 94px;
+}
+
+.about-us-bottom {
+  display: flex;
+  flex-direction: row;
+  padding-top: 23px;
+  padding-bottom: 23px;
+  justify-content: space-between;
+}
+
+.about-us-bottom-text {
+  font: normal 18px Segoe UI;
+  text-align: left;
+  color: white;
+  width: 275px;
+  height: 48px;
+  text-align: justify;
+}
+.about-us-bottom-item {
+  display: flex;
+  align-items: center;
+  width: 240px;
+  height: 48px;
+  margin-right: 16px;
+  border: 1px solid white;
+}
+.about-us-bottom-link {
+  display: flex;
+  align-items: center;
+  width: 240px;
+  height: 48px;
+  margin-right: 16px;
+  background: white;
+}
+.about-us-bottom-item-text {
+  margin-left: 31px;
+  font: 14px Segoe UI;
+  color: white;
+}
+.about-us-bottom-link-text {
+  margin-left: auto;
+  margin-right: auto;
+  font: bold 14px Segoe UI;
+  color: black;
+}
+
+.features-of-hoverboards-background {
+  background: white;
+}
+.features-of-hoverboards {
+  padding-top: 65px;
+  padding-bottom: 66px;
+}
+.features-of-hoverboards-header {
+  font: lighter 34px Segoe UI;
+}
+.features-of-hoverboards-menu {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.features-of-hoverboards-menu-item {
+  width: 352px;
+  font: lighter 20px Segoe UI;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  margin-right: 36px;
+  padding-top: 51px;
+  padding-bottom: 56px;
+}
+.features-of-hoverboards-text {
+  font: lighter 19.9px Segoe UI;
+  text-align: justify;
+}
+.catalog-background {
+  background: #fbfbfb;
+}
+.catalog {
+  padding-top: 65px;
+}
+.catalog-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font: lighter 34px Segoe UI;
+  color: black;
+}
+.catalog-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.catalog-menu-item-fill {
+  padding-bottom: 2px;
+  display: flex;
+  border-radius: 15px;
+  width: 52px;
+  height: 31px;
+  background: #ffa019;
+  font: lighter 16px Segoe UI;
+  align-items: center;
+  justify-content: center;
+}
+.catalog-menu-item {
+  display: flex;
+  height: 31px;
+  font: lighter 16px Segoe UI;
+  margin-left: 34px;
+  align-items: center;
+  justify-content: center;
+}
+.catalog-menu-item-fill-text {
+  font: lighter 16px Segoe UI;
+  color: white;
+}
+.catalog-menu-item-text {
+  font: lighter 16px Segoe UI;
+  color: black;
+}
+.catalog-goods-menu {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  padding-top: 61px;
+  padding-bottom: 61px;
+  margin-right: 30px;
+}
+.catalog-goods-menu-items {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  width: 261px;
+  height: 450px;
+  background: white;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.1);
+}
+.catalog-goods-items-img {
+  width: 261px;
+  height: 261px;
+}
+.img-1 {
+  background: url(../img/s_2.jpg) no-repeat center top / cover;
+}
+.img-2 {
+  background: url(../img/h_2.jpg) no-repeat center top / cover;
+}
+.img-3 {
+  background: url(../img/e_3.jpg) no-repeat center top / cover;
+}
+.img-4 {
+  background: url(../img/s_1.jpg) no-repeat center top / cover;
+}
+.catalog-goods-menu-items-name-background {
+  margin-top: 37px;
+  display: flex;
+  height: 29px;
+  padding-right: 12px;
+  padding-left: 13px;
+  background: #ffa019;
+  align-items: center;
+  border-radius: 0px 15px 15px 0px;
+}
+.catalog-goods-menu-items-name {
+  font: normal 14px Segoe UI;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+}
+.catalog-goods-items-description {
+  font: lighter 16px Segoe UI;
+  margin-left: 13px;
+}
 .arrow-left {
   transform: rotate(180deg);
   margin-right: 12px;
